# auto_test_tool

./: CMakeLists.txt  start.sh  time_sync_test.c
bsp/: curent.cpp  curent.h  gpio.cpp  gpio.h  uart.cpp  uart.h
common/: common.cpp  common.h  log.cpp  log.h
conf/: config.xlsx  upload_20251225_200200.txt
http_server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
http_server/public/: index.html
http_server/src/: http_main.cpp  post.cpp  post.h
myenv/: pyvenv.cfg
sample/: emmc_test.cpp  low_power_test.cpp
services/: thread_pool.cpp  thread_pool.h
shell/: download_mcu_package.sh  program_bin.sh
src/: adb.cpp  adb.h  common.cpp  common.h  emmc.cpp  emmc.h  emmc_test.cpp  log.cpp  main.cpp  mode_test.cpp  power_manage.cpp  power_manage.h  tcp_connect.cpp  tcp_connect.h  tsu_info.cpp  update.cpp  xlxs_opt.cpp  xlxs_opt.h
test_p/bsp/: log.py
third_library/OpenXLSX/Examples/: CMakeLists.txt
